Starts styling home-card

--- a/wp-content/themes/twentysixteen-child/style.scss
+++ b/wp-content/themes/twentysixteen-child/style.scss
@@ -120,6 +120,12 @@ $accent-color: #E07A5F;
 }
 
 .home-card {
+  margin-top: -20px;
+  img {
+    display: block;
+    border-radius: 8px;
+    margin: 0 auto;
+  }
   p {
     float: left;
   }
