--- a/wp-content/themes/twentysixteen-child/style.css
+++ b/wp-content/themes/twentysixteen-child/style.css
@@ -65,7 +65,13 @@ Version: 0.1.0
     width: 100%;
     height: 168px; }
 
-.home-card p {
-  float: left; }
+.home-card {
+  margin-top: -20px; }
+  .home-card img {
+    display: block;
+    border-radius: 8px;
+    margin: 0 auto; }
+  .home-card p {
+    float: left; }
 
 /*# sourceMappingURL=style.css.map */
