--- a/wp-content/themes/twentysixteen-child/style.scss
+++ b/wp-content/themes/twentysixteen-child/style.scss
@@ -15,6 +15,7 @@ Version: 0.1.0
 $white: #F4F7F5;
 $off-white: #c4c4c3;
 $black: #1a1a1a;
+$dark-grey: #454545;
 $accent-color: #E07A5F;
 
 $head-font: 'Fjalla One', sans-serif;
@@ -31,9 +32,22 @@ $content-font: 'Average', serif;
   }
 }
 
+body {
+  background-color: $dark-grey;
+}
+
 .site {
-  max-width: 980px;
-  margin: 0 auto;
+  box-shadow: 6px 0 12px -4px $black, -6px 0 8px -4px $black;
+  margin: 0;
+
+  .site-content {
+    max-width: 980px;
+    margin: 0 auto;
+
+    .site-main {
+      margin: 80px 0 30px 0;
+    }
+  }
 }
 
 h1, h2, h3, h4, h5, h6, a {
@@ -42,6 +56,10 @@ h1, h2, h3, h4, h5, h6, a {
 
 p {
   font-family: $content-font;
+}
+
+a {
+  cursor: pointer;
 }
 
 ul {
@@ -61,9 +79,23 @@ ul {
 // =================================
 
 .site-header {
-  background-color: #454545;
+  background-color: $dark-grey;
   padding-top: 0;
   padding-bottom: 0;
+
+  &:after {
+    content: '';
+    position: absolute;
+    background-image: url('assets/images/header-shape-desktop.png');
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 70px;
+    left: 0;
+    padding: 0;
+    margin-top: -2px;
+  }
 
   .site-header-main {
     .site-branding {
@@ -132,21 +164,7 @@ ul {
   }
 }
 
-.site-content {
-  padding: 0;
-
-  &:before {
-    content: '';
-    display: block;
-    background-image: url('assets/images/header-shape.png');
-    background-position: bottom;
-    width: 100%;
-    height: 168px;
-  }
-}
-
 .home-card {
-  margin-top: -20px;
   img {
     display: block;
     border-radius: 8px;
